manifestos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-nodejs
  labels:
    app: app-nodejs
spec:
  revisionHistoryLimit: 1
  replicas: 2
  selector:
    matchLabels:
      app: app-nodejs
  template:
    metadata:
      labels:
        app: app-nodejs
    spec:
      containers:
      - name: app-nodejs
        image: welignton/app-nodejs:85b7325
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
