manifestos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-nodejs
  labels:
    app: app-nodejs
    monitoring: "enabled"
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "3000"
spec:
  type: ClusterIP
  selector:
    app: app-nodejs
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
